# grocerytrackingapp

./: .gitignore  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yaml  deploy.yaml
app/: main.py
app/api/v1/: auth.py  lists.py
app/core/: config.py
app/db/: database.py  schema.py
app/services/: auth_services.py
design/: Database Design.drawio
server/: requirements.txt
server/app/: dependencies.py  main.py  requirements.txt
server/app/api/v1/: auth.py  lists.py
server/app/core/: config.py
server/app/db/: database.py  init_db.py  schema.py
server/app/models/: list.py
server/app/services/: auth_services.py  user_services.py
tests/: test_main.py
tests/api/v1/: test_auth.py
tests/db/: test_database.py
tests/services/: test_auth_services.py  test_user_services.py
